# channels-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  events.rs  main.rs
tests/: config.yml  config_integration_test.rs  test_config.yml
